--- a/index.html
+++ b/index.html
@@ -103,5 +103,11 @@
 <div class="stopwatch" id="a-timer"></div>
   
 <div class="stopwatch" id="b-timer"></div>  
+<span class="btn-wrap">
+<button class="test single">single</button>
+<button class="test double">double</button>
+<button class="test triple">triple</button>
+<button class="test donger">donger</button>
+</span>
 </body>
 </html>
