--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
   
 <div class="stopwatch" id="b-timer"></div>  
 <span class="btn-wrap">
-<button class="test single">single</button>
-<button class="test double">double</button>
-<button class="test triple">triple</button>
-<button class="test donger">donger</button>
+<button class="test single" onclick="bases(1)">single</button>
+<button class="test double" onclick="bases(2)">double</button>
+<button class="test triple" onclick="bases(3)">triple</button>
+<button class="test donger" onclick="bases(4)">donger</button>
 </span>
 </body>
 </html>
