changed colors n stuff

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset=utf-8 />
 <title>Stopwatch BB</title>
+<link href='http://fonts.googleapis.com/css?family=Monda' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Doppio+One' rel='stylesheet' type='text/css'>
 <link rel ="stylesheet" type="text/css" href="index.css">
 <link rel="stylesheet" type="text/css" href="Scoreboard.css">
 <link rel="stylesheet" type="text/css" href="stopwatch.css">
@@ -103,11 +105,6 @@
 <div class="stopwatch" id="a-timer"></div>
   
 <div class="stopwatch" id="b-timer"></div>  
-<span class="btn-wrap">
-<button class="test single" onclick="bases(1)">single</button>
-<button class="test double" onclick="bases(2)">double</button>
-<button class="test triple" onclick="bases(3)">triple</button>
-<button class="test donger" onclick="bases(4)">donger</button>
-</span>
+
 </body>
 </html>
