--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 
             </table>
 
+            <h4 class="legend"> LEGEND: .96 & Below - Strike</h4>
+            <h4 class="legend"> .97 - Single</h4>
+            <h4 class="legend"> .98 - Single</h4>
+            <h4 class="legend"> .99 - Single</h4>
+            <h4 class="legend"> 100 - Single</h4>
+            <h4 class="legend"> 101 & Up - Out</h4>
+
 			<div class="container bases">
 			    <div id="base" class="second_base base"></div>
 			    <div id="base" class="first_base base"></div>
