node app working

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <link rel ="stylesheet" type="text/css" href="index.css">
 <link rel="stylesheet" type="text/css" href="Scoreboard.css">
 <link rel="stylesheet" type="text/css" href="stopwatch.css">
-<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="stopwatch.js"></script>
 <script type="text/javascript" src="sw.js"></script>
 
 
 </head>
     <body>
-        <h2 class="title">Stopwatch Baseball</h2>
+        	<h2 class="title">Stopwatch Baseball</h2>
 			<table id="scoreboard">
 			    <tr>
 			        <td class="firstRow">Inning</td>
@@ -86,11 +86,11 @@
 
             </table>
 
-            <h4 class="legend"> LEGEND: .96 & Below - Strike</h4>
+            <h4 class="legend"> LEGEND: <br /><br /> .96 & Below - Strike</h4>
             <h4 class="legend"> .97 - Single</h4>
-            <h4 class="legend"> .98 - Single</h4>
-            <h4 class="legend"> .99 - Single</h4>
-            <h4 class="legend"> 100 - Single</h4>
+            <h4 class="legend"> .98 - Double</h4>
+            <h4 class="legend"> .99 - Triple</h4>
+            <h4 class="legend"> 100 - Home Run</h4>
             <h4 class="legend"> 101 & Up - Out</h4>
 
 			<div class="container bases">
